--- a/html/summary.html
+++ b/html/summary.html
@@ -19,7 +19,7 @@
     <header w3-include-html="../templates/header.html"></header>
     <nav w3-include-html="../templates/navigation.html"></nav>
     <main class="summary-container">
-        <div class="title-mobile">Kanban Project Management Tool test</div>
+        <div class="title-mobile">Kanban Project Management Tool</div>
 
         <div class="summ-header">
             <div class="headline">Summary</div>
